--- a/youtubepro.css
+++ b/youtubepro.css
@@ -185,7 +185,7 @@ hr.light100{
     font-size:2.5em;
     padding: 1.2rem;
 }
-
+/* 
 #fixed{
     background-image: url('https://images.unsplash.com/photo-1490085964525-79c2e1236eca?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
      height: 400px;
@@ -195,7 +195,7 @@ hr.light100{
      background-size: cover;} 
  figure {
       margin: 0;
-   }
+   } */
 }
 
 
@@ -234,7 +234,7 @@ display-4{
     font-size:2em;
     padding: .7rem;
 }
-    
+/*     
 #fixed{
     background-image: url('https://images.unsplash.com/photo-1490085964525-79c2e1236eca?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
     height:300px;
@@ -245,5 +245,5 @@ display-4{
      background-size: cover;             }  
  figure {
       margin: 0;
-   }
+   } */
 }
