--- a/youtubepro.css
+++ b/youtubepro.css
@@ -234,16 +234,6 @@ display-4{
     font-size:2em;
     padding: .7rem;
 }
-/*     
-#fixed{
-    background-image: url('https://images.unsplash.com/photo-1490085964525-79c2e1236eca?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-    height:300px;
-    margin:0;
-     background-repeat: no-repeat;
-     background-attachment: fixed; 
-    margin:0;
-     background-size: cover;             }  
- figure {
-      margin: 0;
-   } */
+    
+    #fixed{display:none;}
 }
